--- a/tamil_hadith_app/native/CMakeLists.txt
+++ b/tamil_hadith_app/native/CMakeLists.txt
@@ -11,23 +11,26 @@ else()
     set(MNN_DIR "${CMAKE_CURRENT_SOURCE_DIR}/../3rd_party/MNN")
 endif()
 
-# MNN build options — minimal build for inference only
-set(MNN_BUILD_SHARED_LIBS ON CACHE BOOL "" FORCE)
-set(MNN_BUILD_TOOLS OFF CACHE BOOL "" FORCE)
-set(MNN_BUILD_QUANTOOLS OFF CACHE BOOL "" FORCE)
-set(MNN_BUILD_CONVERTER OFF CACHE BOOL "" FORCE)
-set(MNN_BUILD_BENCHMARK OFF CACHE BOOL "" FORCE)
-set(MNN_BUILD_TEST OFF CACHE BOOL "" FORCE)
-set(MNN_BUILD_DEMO OFF CACHE BOOL "" FORCE)
-set(MNN_BUILD_TRAIN OFF CACHE BOOL "" FORCE)
-set(MNN_SEP_BUILD OFF CACHE BOOL "" FORCE)
-set(MNN_PORTABLE_BUILD ON CACHE BOOL "" FORCE)
-set(MNN_USE_THREAD_POOL ON CACHE BOOL "" FORCE)
+# MNN build options — minimal build for inference only.
+# These are CACHE variables so they are written once and then
+# respected on subsequent builds WITHOUT forcing a re-configure,
+# which was the root cause of MNN recompiling every time.
+set(MNN_BUILD_SHARED_LIBS ON CACHE BOOL "Build MNN as shared lib")
+set(MNN_BUILD_TOOLS OFF CACHE BOOL "")
+set(MNN_BUILD_QUANTOOLS OFF CACHE BOOL "")
+set(MNN_BUILD_CONVERTER OFF CACHE BOOL "")
+set(MNN_BUILD_BENCHMARK OFF CACHE BOOL "")
+set(MNN_BUILD_TEST OFF CACHE BOOL "")
+set(MNN_BUILD_DEMO OFF CACHE BOOL "")
+set(MNN_BUILD_TRAIN OFF CACHE BOOL "")
+set(MNN_SEP_BUILD OFF CACHE BOOL "")
+set(MNN_PORTABLE_BUILD ON CACHE BOOL "")
+set(MNN_USE_THREAD_POOL ON CACHE BOOL "")
 
 if(ANDROID)
-    set(MNN_OPENCL OFF CACHE BOOL "" FORCE)
-    set(MNN_VULKAN OFF CACHE BOOL "" FORCE)
-    set(MNN_ARM82 ON CACHE BOOL "" FORCE)
+    set(MNN_OPENCL OFF CACHE BOOL "")
+    set(MNN_VULKAN OFF CACHE BOOL "")
+    set(MNN_ARM82 ON CACHE BOOL "")
 endif()
 
 # Build MNN from source
