--- a/tamil_hadith_app/pubspec.yaml
+++ b/tamil_hadith_app/pubspec.yaml
@@ -38,6 +38,8 @@ dependencies:
   path_provider: ^2.1.5
   path: ^1.9.1
   just_audio: ^0.10.5
+  audio_service: ^0.18.17
+  audio_session: ^0.2.1
   ffi: ^2.1.5
 
 dev_dependencies:
@@ -65,7 +67,6 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - assets/db/bukhari.db
-    - assets/models/model_fp32.mnn
     - assets/models/tokens.txt
 
   # An image asset can refer to one or more resolution-specific "variants", see
