--- a/tamil_hadith_app/pubspec.yaml
+++ b/tamil_hadith_app/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   audio_service: ^0.18.17
   audio_session: ^0.2.1
   ffi: ^2.1.5
+  shared_preferences: ^2.5.4
 
 dev_dependencies:
   flutter_test:
@@ -66,7 +67,8 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
-    - assets/db/bukhari.db
+    - assets/db/hadith.db
+    - assets/db/tamil_ift.db
     - assets/models/tokens.txt
 
   # An image asset can refer to one or more resolution-specific "variants", see
