--- a/tamil_hadith_app/android/app/src/main/AndroidManifest.xml
+++ b/tamil_hadith_app/android/app/src/main/AndroidManifest.xml
@@ -4,9 +4,9 @@
     <uses-permission android:name="android.permission.FOREGROUND_SERVICE"/>
     <uses-permission android:name="android.permission.FOREGROUND_SERVICE_MEDIA_PLAYBACK"/>
     <application
-        android:label="tamil_hadith_audio"
+        android:label="Tamil Quran Hadith Audio"
         android:name="${applicationName}"
-        android:icon="@mipmap/ic_launcher">
+        android:icon="@mipmap/launcher_icon">
         <activity
             android:name=".MainActivity"
             android:exported="true"
