--- a/tamil_hadith_app/pubspec.yaml
+++ b/tamil_hadith_app/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   audio_session: ^0.2.1
   ffi: ^2.1.5
   shared_preferences: ^2.5.4
+  url_launcher: ^6.3.1
 
 dev_dependencies:
   flutter_test:
